# dahlia

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  grammar.ebnf
app/: CMakeLists.txt  main.cpp
examples/: README.md  factorial.dal  filter_and_map.dal  insertion_sort.dal  string_coloring.dal  sudoku_solver.dal
lib/: CMakeLists.txt
lib/include/dahlia_lib/: Ast.h  Builtins.h  CharReader.h  DiagnosticMessages.h  DiagnosticPrinter.h  Interpreter.h  LexerDiagnostics.h  Parser.h  ParserDiagnostic.h  Position.h  RuntimeError.h  Signal.h  Stack.h  Token.h  Value.h  Variable.h
lib/src/: Ast.cpp  Ast.h  Builtins.cpp  CharReader.cpp  CharReader.h  DiagnosticMessages.cpp  DiagnosticPrinter.cpp  Diagnostics.hpp  Interpreter.cpp  Lexer.cpp  Lexer.h  LexerDiagnostics.h  Parser.h  ParserDiagnostic.h  Position.cpp  Position.h  Stack.cpp  Token.cpp  Token.h  Value.cpp  test.cpp
test/: CMakeLists.txt  CharReader.cpp  CharReaderTest.cpp  InterpreterTest.cpp  Lexer.cpp  LexerTest.cpp  ParserTest.cpp  ValueTest.cpp  main.cpp  test.cpp
